deployment/k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  labels:
    app: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      volumes:
        # Create the shared files volume to be used in both containers
        - name: shared-files
          emptyDir: {}
      containers:
        - name: nginx
          #image: $(minikube ip):5000/nginx:base
          image: 192.168.49.2:5000/nginx:base
          ports:
            - containerPort: 80
          volumeMounts:
            - name: shared-files
              mountPath: /var/www/html
        - name: php-fpm
          image: php:7.4-fpm
          ports:
            - containerPort: 80
          volumeMounts:
            - name: shared-files
              mountPath: /var/www/html
          lifecycle:
            postStart:
              exec:
                command: ["/bin/sh", "-c", "echo '<?php phpinfo(); ?>' >> /var/www/html/index.php"]
