deployment/k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  labels:
    app: web
spec:
  ports:
    - port: 80
  type: NodePort
  selector:
    app: web
